<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_chat_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_new_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/enter_mobile_number_hint"
        android:inputType="number"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="phone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_createNewChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:backgroundTint="@color/chatHeaderColor"
        android:padding="15dp"
        android:text="@string/let_s_talk_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>